--- a/app/src/main/res/layout/content_form_car_aset.xml
+++ b/app/src/main/res/layout/content_form_car_aset.xml
@@ -111,7 +111,7 @@
                             android:ems="10"
                             android:hint="Nama"
                             android:padding="@dimen/min_padding"
-                            android:text="Mobil Rental" />
+                            android:text="" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -138,7 +138,7 @@
                             android:ems="10"
                             android:hint="Brand"
                             android:padding="@dimen/min_padding"
-                            android:text="SUZUKI" />
+                            android:text="" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -164,7 +164,7 @@
                             android:ems="10"
                             android:hint="Tipe"
                             android:padding="@dimen/min_padding"
-                            android:text="ERTIGA" />
+                            android:text="" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -190,7 +190,7 @@
                             android:ems="10"
                             android:hint="Plat Nomor"
                             android:padding="@dimen/min_padding"
-                            android:text="B 2946 DK" />
+                            android:text="" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -217,7 +217,7 @@
                             android:hint="Tahun Produksi"
                             android:inputType="textPersonName"
                             android:padding="@dimen/min_padding"
-                            android:text="2017" />
+                            android:text="" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -244,7 +244,7 @@
                             android:hint="Warna"
                             android:inputType="textPersonName"
                             android:padding="@dimen/min_padding"
-                            android:text="BLUE" />
+                            android:text="" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -271,7 +271,7 @@
                             android:hint="Nomor BPKB"
                             android:inputType="textPersonName"
                             android:padding="@dimen/min_padding"
-                            android:text="005201701SWQ116" />
+                            android:text="" />
 
                     </LinearLayout>
 
@@ -299,7 +299,7 @@
                             android:hint="Kapasitas Mesin"
                             android:inputType="textPersonName"
                             android:padding="@dimen/min_padding"
-                            android:text="1333 cc" />
+                            android:text="" />
                     </LinearLayout>
 
                 </LinearLayout>
@@ -362,7 +362,7 @@
                             android:hint="Bahan Bakar"
                             android:inputType="textPersonName"
                             android:padding="@dimen/min_padding"
-                            android:text="PERTAMAX" />
+                            android:text="" />
 
                     </LinearLayout>
 
@@ -390,7 +390,7 @@
                             android:hint="Kursi"
                             android:inputType="number"
                             android:padding="@dimen/min_padding"
-                            android:text="6" />
+                            android:text="0" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -424,6 +424,7 @@
                                 android:layout_marginEnd="10dp"
                                 android:buttonTint="@color/colorPrimary"
                                 android:checked="true"
+                                android:layout_weight="1"
                                 android:contextClickable="false"
                                 android:text="manual" />
 
@@ -431,6 +432,7 @@
                                 android:id="@+id/r_automatic"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_weight="1"
                                 android:buttonTint="@color/colorPrimary"
                                 android:text="automatic" />
 
