--- a/app/src/main/res/layout/content_form_maternity_aset.xml
+++ b/app/src/main/res/layout/content_form_maternity_aset.xml
@@ -110,10 +110,10 @@
                             android:elevation="0dp"
                             android:ems="10"
                             android:hint="Nama"
-                            android:padding="@dimen/min_padding"
                             android:imeOptions="actionNext"
                             android:inputType="text"
-                            android:text="Mainan Rental" />
+                            android:padding="@dimen/min_padding"
+                            android:text="" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -139,10 +139,10 @@
                             android:elevation="0dp"
                             android:ems="10"
                             android:hint="Brand"
-                            android:padding="@dimen/min_padding"
                             android:imeOptions="actionNext"
                             android:inputType="text"
-                            android:text="POLYGON" />
+                            android:padding="@dimen/min_padding"
+                            android:text="" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -167,10 +167,10 @@
                             android:background="@color/colorNearWhite"
                             android:ems="10"
                             android:hint="Tipe"
-                            android:padding="@dimen/min_padding"
                             android:imeOptions="actionNext"
                             android:inputType="text"
-                            android:text="MONARCH" />
+                            android:padding="@dimen/min_padding"
+                            android:text="" />
                     </LinearLayout>
 
                 </LinearLayout>
@@ -235,20 +235,20 @@
                                 android:background="@color/colorNearWhite"
                                 android:ems="10"
                                 android:hint="Hari"
-                                android:padding="@dimen/min_padding"
                                 android:imeOptions="actionNext"
                                 android:inputType="number"
-                                android:text="3" />
+                                android:padding="@dimen/min_padding"
+                                android:text="0" />
 
                             <TextView
                                 android:id="@+id/day"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="Hari"
                                 android:layout_alignParentEnd="true"
                                 android:layout_centerVertical="true"
-                                android:textColor="@color/colorBlack54"
                                 android:layout_marginEnd="@dimen/min_padding"
+                                android:text="Hari"
+                                android:textColor="@color/colorBlack54"
                                 android:textSize="@dimen/medium_text" />
 
                         </RelativeLayout>
@@ -271,8 +271,8 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="horizontal"
-                            android:background="@color/colorNearWhite">
+                            android:background="@color/colorNearWhite"
+                            android:orientation="horizontal">
 
                             <CheckBox
                                 android:id="@+id/as_ck_delivery"
@@ -295,7 +295,6 @@
                                 android:text="Pickup" />
 
                         </LinearLayout>
-
 
 
                     </LinearLayout>
@@ -323,24 +322,24 @@
                             android:id="@+id/as_assurance_price"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:background="@color/colorNearWhite"
                             android:layout_toEndOf="@id/as_ck_assurance"
+                            android:background="@color/colorNearWhite"
                             android:ems="10"
                             android:hint="Nominal"
-                            android:padding="@dimen/min_padding"
                             android:imeOptions="actionNext"
                             android:inputType="number"
+                            android:padding="@dimen/min_padding"
                             android:text="0" />
 
                         <TextView
                             android:id="@+id/idr"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="IDR"
                             android:layout_alignParentEnd="true"
                             android:layout_centerVertical="true"
-                            android:textColor="@color/colorBlack54"
                             android:layout_marginEnd="@dimen/min_padding"
+                            android:text="IDR"
+                            android:textColor="@color/colorBlack54"
                             android:textSize="@dimen/medium_text" />
 
                     </RelativeLayout>
@@ -444,11 +443,11 @@
                                 android:id="@+id/idra"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="IDR"
                                 android:layout_alignParentEnd="true"
                                 android:layout_centerVertical="true"
-                                android:textColor="@color/colorGrey"
                                 android:layout_marginEnd="@dimen/min_padding"
+                                android:text="IDR"
+                                android:textColor="@color/colorGrey"
                                 android:textSize="@dimen/medium_text" />
 
                         </RelativeLayout>
@@ -578,11 +577,11 @@
                                     android:id="@+id/daye"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="IDR"
                                     android:layout_alignParentEnd="true"
                                     android:layout_centerVertical="true"
-                                    android:textColor="@color/colorGrey"
                                     android:layout_marginEnd="@dimen/min_padding"
+                                    android:text="IDR"
+                                    android:textColor="@color/colorGrey"
                                     android:textSize="@dimen/medium_text" />
 
                             </RelativeLayout>
@@ -594,11 +593,11 @@
                         android:id="@+id/btn_price_advance"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="+ Tambah Harga Advance"
                         android:layout_gravity="end"
+                        android:clickable="true"
+                        android:text="+ Tambah Harga Advance"
                         android:textColor="@color/colorPrimary"
-                        android:textSize="@dimen/small_text"
-                        android:clickable="true"/>
+                        android:textSize="@dimen/small_text" />
 
                 </LinearLayout>
 
@@ -622,7 +621,6 @@
             <!--</android.support.v4.view.ViewPager>-->
 
 
-
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -641,7 +639,7 @@
                         android:layout_height="150dp"
                         android:layout_weight="1"
                         android:scaleType="fitCenter"
-                        app:srcCompat="@drawable/bicycle_default" />
+                        app:srcCompat="@drawable/no_image" />
 
                     <Button
                         android:id="@+id/btnUploadFoto"
