--- a/app/src/main/res/layout/content_profile.xml
+++ b/app/src/main/res/layout/content_profile.xml
@@ -17,7 +17,7 @@
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingBottom="@dimen/min_padding">
+            >
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -129,7 +129,6 @@
                             android:id="@+id/pr_address"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:background="@color/colorPrimarySoft"
                             android:padding="@dimen/min_padding"
                             tools:ignore="UselessParent">
 
@@ -168,6 +167,7 @@
                             android:id="@+id/pr_no_telp"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:background="@color/colorPrimarySoft"
                             android:padding="@dimen/min_padding"
                             tools:ignore="UselessParent">
 
@@ -206,7 +206,6 @@
                             android:id="@+id/pr_mail_info"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:background="@color/colorPrimarySoft"
                             android:padding="@dimen/min_padding"
                             tools:ignore="UselessParent">
 
@@ -240,6 +239,74 @@
                                 android:textSize="12sp" />
 
                         </RelativeLayout>
+
+                        <RelativeLayout
+                            android:id="@+id/pr_bank_info"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:padding="@dimen/min_padding"
+                            android:background="@color/colorPrimarySoft"
+                            tools:ignore="UselessParent">
+
+                            <ImageView
+                                android:id="@+id/pr_bank_ico"
+                                android:layout_width="24dp"
+                                android:layout_height="24dp"
+                                android:layout_centerVertical="true"
+                                android:layout_marginEnd="@dimen/min_padding"
+                                android:contentDescription="Bank"
+                                app:srcCompat="@drawable/ic_account_balance_black_24dp" />
+
+                            <TextView
+                                android:id="@+id/pr_bank_name"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="@dimen/xmin_padding"
+                                android:layout_toEndOf="@+id/pr_bank_ico"
+                                android:text="-"
+                                android:textSize="@dimen/medium_text" />
+
+                            <TextView
+                                android:id="@+id/space"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="@dimen/xmin_padding"
+                                android:layout_toEndOf="@+id/pr_bank_name"
+                                android:text="|"
+                                android:textSize="@dimen/medium_text" />
+
+                            <TextView
+                                android:id="@+id/pr_bank_account"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="@dimen/xmin_padding"
+                                android:layout_toEndOf="@+id/space"
+                                android:text="-"
+                                android:textSize="@dimen/medium_text" />
+
+                            <TextView
+                                android:id="@+id/pr_account_name"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginBottom="@dimen/xmin_padding"
+                                android:layout_marginLeft="@dimen/xmin_padding"
+                                android:layout_toEndOf="@+id/pr_bank_ico"
+                                android:layout_below="@+id/pr_bank_name"
+                                android:text="-"
+                                android:textStyle="bold"
+                                android:textSize="@dimen/small_text" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_below="@+id/pr_account_name"
+                                android:layout_marginLeft="@dimen/xmin_padding"
+                                android:layout_toEndOf="@+id/pr_bank_ico"
+                                android:text="Akun Bank"
+                                android:textSize="12sp" />
+
+                        </RelativeLayout>
+
 
                     </LinearLayout>
 
