--- a/app/src/main/res/layout/activity_transaction.xml
+++ b/app/src/main/res/layout/activity_transaction.xml
@@ -19,8 +19,36 @@
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
+        <!--untuk menampilkan tab-->
+        <!--<id.rentist.mitrarentist.Tab.SlidingTabLayout-->
+            <!--android:id="@+id/stl_tab_hs"-->
+            <!--android:layout_below="@+id/toolbar_profile"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--app:tabMode="scrollable">-->
+        <!--</id.rentist.mitrarentist.Tab.SlidingTabLayout>-->
+
+        <android.support.design.widget.TabLayout
+            android:id="@+id/stl_tab_hs"
+            android:layout_below="@+id/toolbar_profile"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:tabMode="scrollable">
+        </android.support.design.widget.TabLayout>
+
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_transaction" />
+    <com.github.ybq.android.spinkit.SpinKitView
+        android:id="@+id/progressBar"
+        style="@style/SpinKitView.FadingCircle"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/btn_lmedium_height"
+        android:layout_marginTop="@dimen/breadcrumb_height"
+        android:background="@android:color/transparent"
+        android:padding="@dimen/min_padding"
+        android:visibility="gone"
+        app:SpinKit_Color="@color/colorWhite" />
+
+    <include layout="@layout/content_history" />
 
 </android.support.design.widget.CoordinatorLayout>
