--- a/app/src/main/res/layout/aset_item_view.xml
+++ b/app/src/main/res/layout/aset_item_view.xml
@@ -141,6 +141,7 @@
                     android:layout_alignParentEnd="true"
                     android:background="@android:color/holo_red_dark"
                     android:padding="@dimen/xmin_padding"
+                    android:visibility="gone"
                     app:srcCompat="@drawable/ic_delete_forever_white_24dp" />
 
                 <TextView
