--- a/app/src/main/res/layout/content_aset_list.xml
+++ b/app/src/main/res/layout/content_aset_list.xml
@@ -11,11 +11,21 @@
     android:orientation="vertical"
     tools:showIn="@layout/activity_aset_list">
 
+    <com.github.ybq.android.spinkit.SpinKitView
+        android:id="@+id/progressBar"
+        style="@style/SpinKitView.FadingCircle"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/btn_lmedium_height"
+        android:background="@android:color/transparent"
+        android:padding="@dimen/min_padding"
+        android:visibility="gone"
+        app:SpinKit_Color="@color/colorWhite" />
+
     <LinearLayout
         android:id="@+id/no_aset"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/breadcrumb_height"
+        android:layout_marginTop="@dimen/explorer_item_size"
         android:orientation="vertical"
         android:visibility="gone"
         >
