--- a/app/src/main/res/layout/content_form_bicycle_aset.xml
+++ b/app/src/main/res/layout/content_form_bicycle_aset.xml
@@ -113,7 +113,7 @@
                             android:padding="@dimen/min_padding"
                             android:imeOptions="actionNext"
                             android:inputType="text"
-                            android:text="Sepeda Rental" />
+                            android:text="" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -142,7 +142,7 @@
                             android:padding="@dimen/min_padding"
                             android:imeOptions="actionNext"
                             android:inputType="text"
-                            android:text="POLYGON" />
+                            android:text="" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -170,7 +170,7 @@
                             android:padding="@dimen/min_padding"
                             android:imeOptions="actionNext"
                             android:inputType="text"
-                            android:text="MONARCH" />
+                            android:text="" />
                     </LinearLayout>
 
                 </LinearLayout>
@@ -238,7 +238,7 @@
                                 android:padding="@dimen/min_padding"
                                 android:imeOptions="actionNext"
                                 android:inputType="number"
-                                android:text="3" />
+                                android:text="0" />
 
                             <TextView
                                 android:id="@+id/day"
