--- a/app/src/main/res/layout/content_form_edit_profil.xml
+++ b/app/src/main/res/layout/content_form_edit_profil.xml
@@ -57,7 +57,8 @@
                 android:layout_height="match_parent"
                 android:layout_marginBottom="@dimen/xmin_padding"
                 android:orientation="vertical"
-                android:padding="@dimen/xmin_padding">
+                android:padding="@dimen/xmin_padding"
+                android:visibility="gone">
 
                 <TextView
                     android:id="@+id/textView36"
@@ -72,8 +73,9 @@
                     android:layout_height="wrap_content"
                     android:background="@color/colorNearWhite"
                     android:ems="10"
-                    android:hint="email"
-                    android:inputType="textEmailAddress"
+                    android:hint="Email"
+                    android:imeOptions="actionNext"
+                    android:inputType="textCapSentences"
                     android:padding="@dimen/min_padding" />
             </LinearLayout>
 
@@ -88,7 +90,7 @@
                     android:id="@+id/textView37"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Nama rental"
+                    android:text="Nama Rental"
                     android:textColor="@color/colorBlack" />
 
                 <EditText
@@ -97,8 +99,9 @@
                     android:layout_height="wrap_content"
                     android:background="@color/colorNearWhite"
                     android:ems="10"
-                    android:hint="nama rental"
-                    android:inputType="textPersonName"
+                    android:hint="Nama Rental"
+                    android:inputType="textCapSentences"
+                    android:imeOptions="actionNext"
                     android:padding="@dimen/min_padding" />
             </LinearLayout>
 
@@ -122,8 +125,9 @@
                     android:layout_height="wrap_content"
                     android:background="@color/colorNearWhite"
                     android:ems="10"
-                    android:hint="nama pemilik"
-                    android:inputType="textPersonName"
+                    android:hint="Nama Pemilik"
+                    android:imeOptions="actionNext"
+                    android:inputType="textCapSentences"
                     android:padding="@dimen/min_padding" />
             </LinearLayout>
 
@@ -138,7 +142,7 @@
                     android:id="@+id/textView39"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="No. Telepon"
+                    android:text="Nomor Telepon"
                     android:textColor="@color/colorBlack" />
 
                 <EditText
@@ -147,7 +151,8 @@
                     android:layout_height="wrap_content"
                     android:background="@color/colorNearWhite"
                     android:ems="10"
-                    android:hint="nomor telepon"
+                    android:hint="Nomor Telepon"
+                    android:imeOptions="actionNext"
                     android:inputType="phone"
                     android:padding="@dimen/min_padding" />
             </LinearLayout>
@@ -172,9 +177,106 @@
                     android:layout_height="wrap_content"
                     android:background="@color/colorNearWhite"
                     android:ems="10"
-                    android:hint="alamat"
+                    android:hint="Alamat"
+                    android:imeOptions="actionNext"
                     android:inputType="textMultiLine"
                     android:lines="3"
+                    android:padding="@dimen/min_padding" />
+            </LinearLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/xmin_padding"
+                android:background="@color/colorPrimary"
+                android:padding="@dimen/min_padding">
+
+                <TextView
+                    android:id="@+id/textView8"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_centerVertical="true"
+                    android:text="Akun Bank"
+                    android:textAlignment="center"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="@dimen/medium_text"
+                    android:textStyle="bold" />
+
+            </RelativeLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="@dimen/xmin_padding"
+                android:orientation="vertical"
+                android:padding="@dimen/xmin_padding">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Nama Bank"
+                    android:textColor="@color/colorBlack" />
+
+                <EditText
+                    android:id="@+id/epr_bank_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorNearWhite"
+                    android:ems="10"
+                    android:hint="Nama Bank"
+                    android:inputType="textPersonName"
+                    android:imeOptions="actionNext"
+                    android:padding="@dimen/min_padding" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="@dimen/xmin_padding"
+                android:orientation="vertical"
+                android:padding="@dimen/xmin_padding">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Nomor Rekening"
+                    android:textColor="@color/colorBlack" />
+
+                <EditText
+                    android:id="@+id/epr_bank_account"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorNearWhite"
+                    android:ems="10"
+                    android:hint="Nomor Rekening"
+                    android:inputType="number"
+                    android:imeOptions="actionNext"
+                    android:padding="@dimen/min_padding" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="@dimen/xmin_padding"
+                android:orientation="vertical"
+                android:padding="@dimen/xmin_padding">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Pemilik Akun"
+                    android:textColor="@color/colorBlack" />
+
+                <EditText
+                    android:id="@+id/epr_account_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorNearWhite"
+                    android:ems="10"
+                    android:hint="Pemilik Akun"
+                    android:inputType="textCapSentences"
+                    android:imeOptions="actionNext"
                     android:padding="@dimen/min_padding" />
             </LinearLayout>
 
