--- a/app/src/main/res/layout/content_form_motorcycle_aset.xml
+++ b/app/src/main/res/layout/content_form_motorcycle_aset.xml
@@ -109,7 +109,7 @@
                             android:ems="10"
                             android:hint="Nama"
                             android:padding="@dimen/min_padding"
-                            android:text="Motor Rental" />
+                            android:text="" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -136,7 +136,7 @@
                             android:ems="10"
                             android:hint="Brand"
                             android:padding="@dimen/min_padding"
-                            android:text="KAWASAKI" />
+                            android:text="" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -162,7 +162,7 @@
                             android:ems="10"
                             android:hint="Tipe"
                             android:padding="@dimen/min_padding"
-                            android:text="NINJA 250R" />
+                            android:text="" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -188,7 +188,7 @@
                             android:ems="10"
                             android:hint="Plat Nomor"
                             android:padding="@dimen/min_padding"
-                            android:text="B 2946 KK" />
+                            android:text="" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -215,7 +215,7 @@
                             android:hint="Tahun Produksi"
                             android:inputType="textPersonName"
                             android:padding="@dimen/min_padding"
-                            android:text="2015" />
+                            android:text="" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -242,7 +242,7 @@
                             android:hint="Warna"
                             android:inputType="textPersonName"
                             android:padding="@dimen/min_padding"
-                            android:text="RED" />
+                            android:text="" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -269,7 +269,7 @@
                             android:hint="Nomor BPKB"
                             android:inputType="textPersonName"
                             android:padding="@dimen/min_padding"
-                            android:text="005201701SWQ116" />
+                            android:text="" />
 
                     </LinearLayout>
 
@@ -297,7 +297,7 @@
                             android:hint="Kapasitas Mesin"
                             android:inputType="textPersonName"
                             android:padding="@dimen/min_padding"
-                            android:text="250 cc" />
+                            android:text="" />
                     </LinearLayout>
 
                 </LinearLayout>
@@ -360,7 +360,7 @@
                             android:hint="Bahan Bakar"
                             android:inputType="textPersonName"
                             android:padding="@dimen/min_padding"
-                            android:text="PERTAMAX" />
+                            android:text="" />
                     </LinearLayout>
 
 
@@ -435,7 +435,7 @@
                                 android:ems="10"
                                 android:hint="Hari"
                                 android:padding="@dimen/min_padding"
-                                android:text="3" />
+                                android:text="0" />
 
                             <TextView
                                 android:id="@+id/day"
