--- a/app/src/main/res/layout/content_transaction_new.xml
+++ b/app/src/main/res/layout/content_transaction_new.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/prent_frag"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/content_transaction"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="id.rentist.mitrarentist.fragment.HistoryAcceptFragment">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context="id.rentist.mitrarentist.TransactionaNewActivity"
+    tools:showIn="@layout/activity_transaction_new"
+    android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/no_trans"
@@ -37,9 +39,9 @@
     </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/haccept_recyclerViewFrag"
+        android:id="@+id/tr_recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:padding="@dimen/xmin_padding">
     </android.support.v7.widget.RecyclerView>
 
@@ -48,9 +50,9 @@
         style="@style/SpinKitView.FadingCircle"
         android:layout_width="match_parent"
         android:layout_height="@dimen/btn_lmedium_height"
-        android:layout_marginTop="@dimen/breadcrumb_height"
         android:background="@android:color/transparent"
         android:padding="@dimen/min_padding"
+        android:visibility="gone"
         app:SpinKit_Color="@color/colorWhite" />
 
 </LinearLayout>
