--- a/app/src/main/res/layout/content_voucher.xml
+++ b/app/src/main/res/layout/content_voucher.xml
@@ -15,7 +15,8 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/v_recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:paddingBottom="@dimen/min_padding">
         </android.support.v7.widget.RecyclerView>
 
     </android.support.v4.widget.SwipeRefreshLayout>
