--- a/app/src/main/res/layout/history_saldo_view.xml
+++ b/app/src/main/res/layout/history_saldo_view.xml
@@ -33,7 +33,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/xmin_padding"
                     android:layout_marginStart="@dimen/min_padding"
-                    android:text="Daihatsu Xenia"
+                    android:text=""
                     android:textColor="@color/colorPrimaryDark"
                     android:textSize="@dimen/medium_text"
                     android:textStyle="bold" />
