--- a/app/src/main/res/menu/menu_save_option.xml
+++ b/app/src/main/res/menu/menu_save_option.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".FormEditProfilActivity">
 
     <!--menu yang akan tampil pada toolbar-->
     <item
         android:id="@+id/action_save"
         android:orderInCategory="100"
-        android:title="@string/action_add"
+        android:title="Simpan"
         android:icon="@drawable/ic_save_white_24dp"
-        app:showAsAction="always" />
+        app:showAsAction="always|withText" />
 
 </menu>
