--- a/app/src/main/res/layout/content_form_feature.xml
+++ b/app/src/main/res/layout/content_form_feature.xml
@@ -59,7 +59,7 @@
                     android:id="@+id/textView13"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Harga Satuan"
+                    android:text="Harga per Hari"
                     android:textColor="@color/colorBlack" />
 
                 <EditText
@@ -85,7 +85,7 @@
                     android:id="@+id/textView14"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Banyaknya"
+                    android:text="Stok"
                     android:textColor="@color/colorBlack" />
 
                 <EditText
